--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,3 +20,58 @@ body {
     border-radius: 0;
     border-bottom: 10px solid black;
   }
+
+  .description {
+    height: 100%;
+    margin-top: -2rem;
+  }
+  
+  .time-block {
+    text-align: center;
+    border-radius: 15px;
+  }
+  
+  .row {
+    white-space: pre-wrap;
+    border-top: 1px solid white;
+    background-color: grey;
+    height: 5rem;
+  }
+  
+  
+  .hour {
+    background-color: #ffffff;
+    color: #000000;
+    border-top: 1px dashed #000000;
+    height: 100%;
+  }
+  
+  .past {
+    background-color: #d3d3d3;
+    color: white;
+  }
+  
+  .future {
+    background-color: #77dd77;
+    color: white;
+  }
+
+  .present {
+    background-color: #ff6961;
+    color: white;
+  }
+  
+  .saveBtn {
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #06aed5;
+    color: white;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .fa-lock {
+    pointer-events: none;
+  }
